2002-11-02  Roland McGrath  <roland@redhat.com>

	* sysdeps/unix/bsd/bsd4.4/freebsd/bits/typesizes.h: New file.

2002-11-02  Roland McGrath  <roland@redhat.com>

	* manual/filesys.texi (Reading/Closing Directory): Rewrite readdir_r
	description to be clearer and to say that *RESULT is set to ENTRY.

2002-10-30  Jakub Jelinek  <jakub@redhat.com>

	* posix/regexec.c (build_trtable): Alloca or malloc dests_node and
	dests_ch arrays together.  Alloca or malloc dest_states,
	dest_states_word and dest_states_nl arrays together.  Free memory on
	error exit.

2002-10-29  Daniel Jacobowitz  <drow@mvista.com>

	* crypt/crypt_util.c (__init_des_r): Initialize current_salt
	and current_saltbits.

2002-11-02  Roland McGrath  <roland@redhat.com>

	* stdio-common/reg-printf.c: Include <stdlib.h>.

2002-11-02  H.J. Lu  <hjl@gnu.org>

	* sysdeps/unix/sysv/linux/mips/syscalls.list (s_execve): Set
	caller to EXTRA instead of execve.

2002-11-01  Roland McGrath  <roland@redhat.com>

	* sysdeps/generic/errno-loc.c [! USE___THREAD]: Use this conditional
	in place of [!(USE_TLS && HAVE___THREAD)].
	(__errno_location) [! USE___THREAD]: Define as strong, not weak.

2002-10-31  Roger Sayle  <roger@eyesopen.com>

	* sysdeps/i386/soft-fp/sfp-machine.h (_FP_NANFRAC_Q, _FP_NANSIGN_Q):
	New macros.
	* sysdeps/x86_64/soft-fp/sfp-machine.h: Likewise.

	* soft-fp/soft-fp.h: Allow sfp-machine.h to define FP_RND_NEAREST
	without defining FP_ROUNDMODE.

2002-10-29  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/gnu/siglist.c (PTR_SIZE_STR): Remove.
	(__old_sys_siglist, __old_sys_sigabbrev): Use strong_alias and
	declare_symbol.
	* sysdeps/mach/hurd/siglist.h (OLD_SIGLIST_SIZE_STR): Remove.
	(OLD_SIGLIST_SIZE): Define.
	* sysdeps/unix/sysv/linux/siglist.h (OLD_SIGLIST_SIZE_STR): Remove.
	(OLD_SIGLIST_SIZE): Define.
	* sysdeps/unix/sysv/linux/arm/siglist.c: Remove.

2002-11-01  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/ia64/strncpy.S: Fix recovery code.

2002-10-30  Jakub Jelinek  <jakub@redhat.com>
